[gd_scene load_steps=15 format=2]

[ext_resource path="res://weapons/Fireball.gd" type="Script" id=1]
[ext_resource path="res://weapons/raw_assets/fire_spritesheet.png" type="Texture" id=2]
[ext_resource path="res://effects/circle32.png" type="Texture" id=3]

[sub_resource type="SphereShape" id=1]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "flicker"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 3 )

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0, 0.406452, 1 )
colors = PoolColorArray( 0.996582, 0, 0, 1, 1, 0.5625, 0, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 0.535227 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.389773 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
lifetime_randomness = 0.52
emission_shape = 1
emission_sphere_radius = 0.2
gravity = Vector3( 0, 5, 0 )
initial_velocity = 2.5
initial_velocity_random = 0.26
angular_velocity_random = 1.0
damping_random = 0.58
angle = 99.8
scale = 0.08
scale_random = 0.01
scale_curve = SubResource( 6 )
color_ramp = SubResource( 10 )
hue_variation = 0.02

[sub_resource type="QuadMesh" id=8]

[sub_resource type="SpatialMaterial" id=11]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 3 )

[node name="Fireball" type="KinematicBody"]
collision_mask = 5
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.226217, 0, 0, 0, 0.226217, 0, 0, 0, 0.226217, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Graphics" type="Spatial" parent="."]

[node name="Sprite3D" type="Sprite3D" parent="Graphics"]
transform = Transform( 1.98163, 0, 0, 0, 1.98163, 0, 0, 0, 1.98163, 0, 0, 0 )
billboard = 1
texture = ExtResource( 2 )
hframes = 2
vframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Graphics/Sprite3D"]
autoplay = "flicker"
anims/RESET = SubResource( 2 )
anims/flicker = SubResource( 3 )

[node name="DestroyAfterHitTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DestroyAfterSpawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="ShowAfterTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true

[node name="SmokeParticles" type="Particles" parent="."]
material_override = SubResource( 4 )
emitting = false
lifetime = 0.5
one_shot = true
explosiveness = 0.87
process_material = SubResource( 7 )
draw_pass_1 = SubResource( 8 )

[node name="FireParticles" type="Particles" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0 )
material_override = SubResource( 11 )
lifetime = 0.22
speed_scale = 0.5
process_material = SubResource( 7 )
draw_pass_1 = SubResource( 8 )

[connection signal="timeout" from="DestroyAfterHitTimer" to="." method="queue_free"]
[connection signal="timeout" from="DestroyAfterSpawnTimer" to="." method="explode"]
[connection signal="timeout" from="ShowAfterTimer" to="." method="show"]
